---
source: src/format.rs
expression: "fmt(indoc!\n{\n    r#\"\n            foo\n            foo2\n            foo.bar\n            .foo.bar\n            .__NAMESPACE__.\n            foo_bar\n            `_foo`\n            `a \"literal\"`\n            `another\n            literal \\` foo`\n            `backslash followed by newline \\\n            `\n            `\\``\n            # Pipe placeholder\n            _\n            # Recognized as a single `_foo` identifier, even if invalid R code (#71).\n            _foo\n            __foo\n            _foo_\n        \"#\n})"
---
foo
foo2
foo.bar
.foo.bar
.__NAMESPACE__.
foo_bar
`_foo`
`a "literal"`
`another
literal \` foo`
`backslash followed by newline \
`
`\``
# Pipe placeholder
_
# Recognized as a single `_foo` identifier, even if invalid R code (#71).
_foo
__foo
_foo_
